--- a/HOLA.html
+++ b/HOLA.html
@@ -8,6 +8,26 @@
     <title>Document</title>
 </head>
 <body>
-hola
+Hola
+
 </body>
 </html>
+<marquee>ADIOS</marquee>
+<marquee scrollamount="35">ADIOS</marquee>
+<marquee scrollamount="40">ADIOS</marquee>
+<marquee scrollamount="45">ADIOS</marquee>
+<marquee scrollamount="50">ADIOS</marquee>
+<marquee scrollamount="55">ADIOS</marquee>
+<marquee scrollamount="60">ADIOS</marquee>
+<marquee scrollamount="65">ADIOS</marquee>
+<marquee scrollamount="70">ADIOS</marquee>
+<marquee scrollamount="75">ADIOS</marquee>
+<marquee scrollamount="80">ADIOS</marquee>
+<marquee scrollamount="85">ADIOS</marquee>
+<marquee scrollamount="90">ADIOS</marquee>
+<marquee scrollamount="95">ADIOS</marquee>
+<marquee scrollamount="100">ADIOS</marquee>
+<marquee scrollamount="200">ADIOS</marquee>
+<marquee scrollamount="400">ADIOS</marquee>
+<marquee scrollamount="800">ADIOS</marquee>
+<marquee scrollamount="1600">ADIOS</marquee>
