--- a/HOLA.html
+++ b/HOLA.html
@@ -14,20 +14,38 @@ Hola
 </html>
 <marquee>ADIOS</marquee>
 <marquee scrollamount="35">ADIOS</marquee>
+<marquee scrollamount="35" direction="right">ADIOS</marquee>
 <marquee scrollamount="40">ADIOS</marquee>
+<marquee scrollamount="40" direction="right">ADIOS</marquee>
 <marquee scrollamount="45">ADIOS</marquee>
+<marquee scrollamount="45" direction="right">ADIOS</marquee>
 <marquee scrollamount="50">ADIOS</marquee>
+<marquee scrollamount="50" direction="right">ADIOS</marquee>
 <marquee scrollamount="55">ADIOS</marquee>
+<marquee scrollamount="55" direction="right">ADIOS</marquee>
 <marquee scrollamount="60">ADIOS</marquee>
+<marquee scrollamount="60" direction="right">ADIOS</marquee>
 <marquee scrollamount="65">ADIOS</marquee>
+<marquee scrollamount="65" direction="right">ADIOS</marquee>
 <marquee scrollamount="70">ADIOS</marquee>
+<marquee scrollamount="70" direction="right">ADIOS</marquee>
 <marquee scrollamount="75">ADIOS</marquee>
+<marquee scrollamount="75" direction="right">ADIOS</marquee>
 <marquee scrollamount="80">ADIOS</marquee>
+<marquee scrollamount="80" direction="right">ADIOS</marquee>
 <marquee scrollamount="85">ADIOS</marquee>
+<marquee scrollamount="85" direction="right">ADIOS</marquee>
 <marquee scrollamount="90">ADIOS</marquee>
+<marquee scrollamount="90" direction="right">ADIOS</marquee>
 <marquee scrollamount="95">ADIOS</marquee>
+<marquee scrollamount="95" direction="right">ADIOS</marquee>
 <marquee scrollamount="100">ADIOS</marquee>
+<marquee scrollamount="100" direction="right">ADIOS</marquee>
 <marquee scrollamount="200">ADIOS</marquee>
+<marquee scrollamount="200" direction="right">ADIOS</marquee>
 <marquee scrollamount="400">ADIOS</marquee>
+<marquee scrollamount="400" direction="right">ADIOS</marquee>
 <marquee scrollamount="800">ADIOS</marquee>
+<marquee scrollamount="800" direction="right">ADIOS</marquee>
 <marquee scrollamount="1600">ADIOS</marquee>
+<marquee scrollamount="1600" direction="right">ADIOS</marquee>
