Prueba comando marquee

--- a/HOLA.html
+++ b/HOLA.html
@@ -10,14 +10,17 @@
 <body>
 Hola
 
+
 </body>
 </html>
 <marquee>ADIOS</marquee>
-<marquee scrollamount="35">ADIOS</marquee>
+<marquee scrollamount="35">
+    <blind>ADIOS</blind>
+</marquee>
 <marquee scrollamount="35" direction="right">ADIOS</marquee>
-<marquee scrollamount="40">ADIOS</marquee>
+<marquee scrollamount="40"><blind>ADIOS</blind></marquee>
 <marquee scrollamount="40" direction="right">ADIOS</marquee>
-<marquee scrollamount="45">ADIOS</marquee>
+<marquee scrollamount="45"><blind>ADIOS</blind></marquee>
 <marquee scrollamount="45" direction="right">ADIOS</marquee>
 <marquee scrollamount="50">ADIOS</marquee>
 <marquee scrollamount="50" direction="right">ADIOS</marquee>
@@ -47,5 +50,5 @@ Hola
 <marquee scrollamount="400" direction="right">ADIOS</marquee>
 <marquee scrollamount="800">ADIOS</marquee>
 <marquee scrollamount="800" direction="right">ADIOS</marquee>
-<marquee scrollamount="1600">ADIOS</marquee>
-<marquee scrollamount="1600" direction="right">ADIOS</marquee>
+<marquee scrollamount="8000">ADIOS</marquee>
+<marquee scrollamount="8000" direction="right">ADIOS</marquee>
